<resources>
    <string name="app_name">Animal Sound</string>
    <string name="background_kid_sky">background kid sky</string>
    <string name="logo_animal_sound">Logo Animal Sound</string>
    <string name="logo_background">logo background</string>
    <string name="icon_animal">icon animal</string>
    <string name="icon_freccia_destra">icon freccia destra</string>
    <string name="play_sound_button">play sound button</string>
    <string name="search_button">search button</string>
    <string name="navigate_back_button">navigate back button</string>
</resources>