<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_splash"
        android:gravity="center"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fl_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:contentDescription="@string/logo_animal_sound"
                android:elevation="6dp"
                android:src="@drawable/logo_chick" />

            <ImageView
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:contentDescription="@string/logo_background"
                android:elevation="5dp"
                android:rotation="45"
                android:scaleType="centerInside"
                android:src="@drawable/logo_bg_square" />
        </FrameLayout>

        <TextView
            android:id="@+id/tv_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:shadowColor="?attr/colorPrimary"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>
</layout>