<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailViewModel"
            type="app.twentyhours.animalsound.viewmodel.M002DetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_savanna"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <ImageView
                android:id="@+id/iv_nav_back"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="start|center"
                android:layout_marginStart="20dp"
                android:contentDescription="@string/navigate_back_button"
                android:onClick="@{() -> detailViewModel.navigateToMainFragment()}"
                android:src="@drawable/ic_left_arrow" />

            <TextView
                android:id="@+id/tv_animal_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-light"
                android:shadowColor="?attr/colorPrimary"
                android:shadowDx="2"
                android:shadowDy="2"
                android:shadowRadius="2"
                android:text="@{detailViewModel.animal.name}"
                android:textColor="@color/white"
                android:textSize="32sp"
                tools:text="Hippo" />
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cv_animal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@color/whiteAlpha"
                app:cardCornerRadius="12dp"
                app:contentPadding="20dp"
                app:strokeColor="@color/white"
                app:strokeWidth="2dp">

                <ImageView
                    android:id="@+id/iv_animal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:contentDescription="@string/icon_animal"
                    android:elevation="6dp"
                    app:imageSrc="@{detailViewModel.animal.photoId}"
                    tools:src="@drawable/ic_hippo" />
            </com.google.android.material.card.MaterialCardView>

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="94dp"
                android:background="@drawable/bg_alpha_round_shape"
                android:onClick="@{() -> detailViewModel.searchAnimal()}"
                android:contentDescription="@string/search_button"
                android:src="@drawable/ic_search" />

            <ImageView
                android:id="@+id/iv_speaker"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="end|bottom"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_alpha_round_shape"
                android:contentDescription="@string/play_sound_button"
                android:onClick="@{() -> detailViewModel.playSound()}"
                android:src="@drawable/ic_speaker" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/nav_layout"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_animals">

            <ImageView
                android:id="@+id/iv_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/icon_freccia_destra"
                android:onClick="@{() -> detailViewModel.previousAnimal()}"
                android:src="@drawable/ic_freccia_sinistra_click" />

            <ImageView
                android:id="@+id/iv_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/icon_freccia_destra"
                android:onClick="@{() -> detailViewModel.nextAnimal()}"
                android:src="@drawable/ic_freccia_destra_click" />
        </LinearLayout>

    </LinearLayout>
</layout>